--- a/FLASK_APP/templates/admin-dashboard.html
+++ b/FLASK_APP/templates/admin-dashboard.html
@@ -1,165 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>AutoGate | Admin Dashboard</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500,600,700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/open-iconic-bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/animate.css') }}">
-
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/owl.carousel.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/owl.theme.default.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/magnific-popup.css') }}">
-
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/aos.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/flaticon.css') }}">
-
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/ionicons.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap-datepicker.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/jquery.timepicker.css') }}">
-
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/icomoon.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/style.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/extra.css') }}">
-    <link rel="stylesheet" type="text/css" href="/static/st">
-  </head>
-  <body>
-    <a name = "top"></a>
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-      <div class="container">
-        <a class="navbar-brand" href="{{url_for('index')}}">AutoGate</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="oi oi-menu"></span> Menu
-        </button>
+{% extends "base.html" %}
+{% block title %}Admin Dashboard{% endblock %}
 
 
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="#" class="nav-link">Dashboard</a></li>
-	        	<li class="nav-item"><a href="{{url_for('signin')}}" class="nav-link">Log Out</a></li>
-	      </div>
-	    </div>
-	  </nav>
+{% block links %}
+  <li class="nav-item"><a href="/" class="nav-link">HOME</a></li>
+  <li class="nav-item active"><a href="/admin-dashboard" class="nav-link">ADMIN</a></li>
+  <li class="nav-item"><a href="/scan" class="nav-link">SCAN</a></li>
+  <li class="nav-item"><a href="/logout" class="nav-link">LOG OUT</a></li>
+{% endblock %}
 
-    <section class="hero-wrap js-fullheight" style="background-image: url(static/images/welcome.png);" data-stellar-background-ratio="0.5">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
-          <div class="col-lg-12 ftco-animate d-flex align-items-center">
-          	<div class="text text-center">
-          		<span class="subheading">Welcome to AutoGate</span>
-  	  				<h1 class="mb-4">Admin Dashboard</h1>
-  	  				<p>Automated TollGate Payment System</p>
-  					</div>
-          </div>
-        </div>
+
+{% block body %}
+
+<section class="hero-wrap js-fullheight" style="background-image: url(static/images/welcome.png);" data-stellar-background-ratio="0.5">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
+      <div class="col-lg-12 ftco-animate d-flex align-items-center">
+      	<div class="text text-center">
+      		<span class="subheading">Welcome to AutoGate</span>
+  				<h1 class="mb-4">Admin Dashboard</h1>
+  				<p>Automated TollGate Payment System</p>
+				</div>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
 
-    <section class="ftco-section center-align" style="padding: 0;">
+<section class="ftco-section center-align" style="padding: 30px;">
 
-          <h4 class="center-align">PAYMENTS</h4>
-        <table class="table table-striped">
+      <h2>PAYMENTS</h2>
+    <table class="table table-striped">
 
-        		<thead>
-        			<tr>
-        				<th>DEPOSITER</th>
-        				<th>AMOUNT</th>
-        				<th>TIME</th>
-        				<th></th>
-        			</tr>
-        		</thead>
+    		<thead>
+    			<tr>
+    				<th>DEPOSITER</th>
+    				<th>AMOUNT</th>
+    				<th>TIME</th>
+            <th>VERIFICATION CODE</th>
+    				<th></th>
+    			</tr>
+    		</thead>
 
-        		<tbody>
-		       {% for payment in payments %}
-		         
-		       	<tr>
-		       		<td>{{ payment["depositer"]["name"] }}</td>
-		       		<td>{{ payment["amount"] }}</td>
-		       		<td>{{ payment["time"] }}</td>
-		       		<td>
-		       			<form action="/approve-payment" method="POST" style="display: inline;">
-		       				<input type="hidden" name="payment_id" value="{{ payment['_id'] }}">
-		       				<input type="submit" value="APPROVE" class="btn btn-primary">
-		       			</form>
-		       			<form action="/remove-payment" method="POST" style="display: inline;">
-		       				<input type="hidden" name="payment_id" value="{{ payment['_id'] }}">
-		       				<input type="submit" value="REMOVE" class="btn btn-secondary">
-		       			</form>
-		       		</td>
-		       	</tr>
+    		<tbody>
+       {% for payment in payments %}
+         
+       	<tr>
+       		<td>{{ payment["depositer"]["name"] }} {{ payment["depositer"]["surname"] }}</td>
+       		<td>{{ payment["amount"] }}</td>
+       		<td>{{ payment["time"] }}</td>
+          <td>{{ payment["verification_code"] }}</td>
+       		<td>
+       			<form action="/approve-payment" method="POST" style="display: inline;">
+       				<input type="hidden" name="payment_id" value="{{ payment['_id'] }}">
+       				<input type="submit" value="APPROVE" class="btn btn-primary">
+       			</form>
+       			<form action="/remove-payment" method="POST" style="display: inline;">
+       				<input type="hidden" name="payment_id" value="{{ payment['_id'] }}">
+       				<input type="submit" value="REMOVE" class="btn btn-secondary">
+       			</form>
+       		</td>
+       	</tr>
 
-		       {% endfor %}
-		      </tbody>
+       {% endfor %}
+      </tbody>
 
-        </table>
-        </tbody>
-      </table>
-    </section>
+    </table>
+    </tbody>
+  </table>
 
-    <footer class="ftco-footer ftco-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2 logo">AutoGate</h2>
-              <p>Automated TollGate Payment System</p>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Team Members</h2>
-              <ul class="list-unstyled">
-                <li class="py-2 d-block">Clayton Sibanda</li>
-                <li class="py-2 d-block">Denzel Chiuseni</li>
-                <li class="py-2 d-block">Shabour Banda</li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Links</h2>
-              <ul class="list-unstyled">
-                <li><a href="#top" class="py-2 d-block">Home</a></li>
-                <li><a href="#services" class="py-2 d-block">Services</a></li>
-                <li><a href="#about" class="py-2 d-block">About</a></li>
-                <li><a href="{{url_for('signin')}}" class="py-2 d-block">Sign In</a></li>
+  {% if payments_count == 0 %}
+    <span style="color: grey; font-size: 30px;">NO PAYMENTS</span>
+  {% endif %}
+</section>
 
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Question?</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Harare Institute of Technology</span></li>
-	                <li><a href="tel: +263776433583"><span class="icon icon-phone"></span><span class="text">+263776433583</span></a></li>
-	                <li><a href="mailto: autogateapp@gmail.com"><span class="icon icon-envelope"></span><span class="text">autogateapp@gmail.com</span></a></li>
-	              </ul>
-	            </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <script src="{{url_for('static', filename = 'js/jquery.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery-migrate-3.0.1.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/popper.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/bootstrap.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.easing.1.3.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.waypoints.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.stellar.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/owl.carousel.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.magnific-popup.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/aos.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.animateNumber.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/scrollax.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/main.js') }}"></script>
-</body>
+{% endblock %}
