--- a/FLASK_APP/templates/index.html
+++ b/FLASK_APP/templates/index.html
@@ -1,50 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>AutoGate | Home</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500,600,700&display=swap" rel="stylesheet">
+{% extends "base.html" %}
 
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/open-iconic-bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/animate.css') }}">
+{% block title %}Home{% endblock %}
 
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/owl.carousel.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/owl.theme.default.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/magnific-popup.css') }}">
+{% block links %}
+  <li class="nav-item active"><a href="/" class="nav-link">HOME</a></li>
+  <li class="nav-item"><a href="/signin" class="nav-link">SIGN IN</a></li>
+  <li class="nav-item"><a href="/signup" class="nav-link">SIGN UP</a></li>
+{% endblock %}
 
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/aos.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/flaticon.css') }}">
-
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/ionicons.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap-datepicker.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/jquery.timepicker.css') }}">
-
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/icomoon.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/style.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/extra.css') }}">
-  </head>
-  <body>
-    <a name = "top"></a>
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-      <div class="container">
-        <a class="navbar-brand" href="{{url_for('index')}}">AutoGate</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="oi oi-menu"></span> Menu
-        </button>
-
-        <div class="collapse navbar-collapse" id="ftco-nav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="#top" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-            <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="{{url_for('signin')}}" class="nav-link">Sign In</a></li>
-        </div>
-      </div>
-    </nav>
+{% block body %}
 
     <section >
       <!-- <div class="overlay"></div> -->
@@ -149,69 +114,4 @@
       </div>
     </section>
 
-    <footer class="ftco-footer ftco-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2 logo">AutoGate</h2>
-              <p>Automated TollGate Payment System</p>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Team Members</h2>
-              <ul class="list-unstyled">
-                <li class="py-2 d-block">Clayton Sibanda</li>
-                <li class="py-2 d-block">Denzel Chiuseni</li>
-                <li class="py-2 d-block">Shabour Banda</li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Links</h2>
-              <ul class="list-unstyled">
-                <li><a href="#top" class="py-2 d-block">Home</a></li>
-                <li><a href="#services" class="py-2 d-block">Services</a></li>
-                <li><a href="#about" class="py-2 d-block">About</a></li>
-                <li><a href="{{url_for('signin')}}" class="py-2 d-block">Sign In</a></li>
-
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Question?</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Harare Institute of Technology</span></li>
-	                <li><a href="tel: +263776433583"><span class="icon icon-phone"></span><span class="text">+263776433583</span></a></li>
-	                <li><a href="mailto: autogateapp@gmail.com"><span class="icon icon-envelope"></span><span class="text">autogateapp@gmail.com</span></a></li>
-	              </ul>
-	            </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <!-- loader -->
-          <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-        </div>
-      </div>
-    </footer>
-
-    <script src="{{url_for('static', filename = 'js/jquery.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery-migrate-3.0.1.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/popper.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/bootstrap.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.easing.1.3.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.waypoints.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.stellar.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/owl.carousel.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.magnific-popup.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/aos.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.animateNumber.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/scrollax.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/main.js') }}"></script>
-</body>
+{% endblock %}
