--- a/FLASK_APP/templates/user-dashboard.html
+++ b/FLASK_APP/templates/user-dashboard.html
@@ -1,219 +1,145 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>AutoGate | User Dashboard</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500,600,700&display=swap" rel="stylesheet">
+{% extends "base.html" %}
 
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/open-iconic-bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/animate.css') }}">
+{% block title %}User Dashboard{% endblock %}
 
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/owl.carousel.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/owl.theme.default.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/magnific-popup.css') }}">
+{% block links %}
+  <li class="nav-item"><a href="/" class="nav-link">HOME</a></li>
+  <li class="nav-item active"><a href="/user-dashboard" class="nav-link">USER ACCOUNT</a></li>
+  <li class="nav-item"><a href="/logout" class="nav-link">LOG OUT</a></li>
+{% endblock %}
 
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/aos.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/flaticon.css') }}">
+{% block body %}
 
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/ionicons.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/bootstrap-datepicker.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/jquery.timepicker.css') }}">
+<section class="hero-wrap js-fullheight" style="background-image: url(static/images/welcome.png);" data-stellar-background-ratio="0.5">
+<div class="overlay"></div>
+<div class="container">
+	<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
+		<div class="col-lg-12 ftco-animate d-flex align-items-center">
+			<div class="text text-center">
+				<span class="subheading">Welcome to AutoGate</span>
+				<h1 class="mb-4">User Dashboard</h1>
+				<p>Automated TollGate Payment System</p>
+			</div>
+		</div>
+	</div>
+</div>
+</section>
 
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/icomoon.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/style.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/extra.css') }}">
-    <link rel="stylesheet" type="text/css" href="/static/st">
-  </head>
-  <body>
-    <a name = "top"></a>
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-      <div class="container">
-        <a class="navbar-brand" href="{{url_for('index')}}">AutoGate</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="oi oi-menu"></span> Menu
-        </button>
+<section class="services-section ftco-section">
+<div class="container">
+	<div class="row justify-content-center pb-3">
+		<div class="col-md-10 heading-section text-center ftco-animate">
+			<span class="subheading">Dashboard</span>
+			<h2 class="mb-4">Welcome {{ name }} ...</h2>
+			<p>Automated TollGate Payment System</p>
+		</div>
+	</div>
+	<div class="row no-gutters d-flex">
+		<div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+			<div class="media block-6 services d-block text-center">
+				<div class="media-body">
+					<h3 class="heading mb-3"></h3>
+					<p><h1></h1></p>
+				</div>
+			</div>
+		</div>
+		
+
+		<div style="display: block; width: 100%; text-align: center;">
+			<h3 class="heading mb-3">BALANCE</h3>
+			<p>
+				<h1 style="padding: 10px; background: grey; color: white; font-weight: 1000; font-size: 20px">
+					{{funds}}
+				</h1>
+			</p>
+
+		</div>
 
 
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="#" class="nav-link">Dashboard</a></li>
-	        	<li class="nav-item"><a href="{{url_for('signin')}}" class="nav-link">Log Out</a></li>
-	      </div>
-	    </div>
-	  </nav>
+	</div>
+</div>
+</section>
 
-    <section class="hero-wrap js-fullheight" style="background-image: url(static/images/welcome.png);" data-stellar-background-ratio="0.5">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
-          <div class="col-lg-12 ftco-animate d-flex align-items-center">
-          	<div class="text text-center">
-          		<span class="subheading">Welcome to AutoGate</span>
-  	  				<h1 class="mb-4">Dashboard</h1>
-  	  				<p>Automated TollGate Payment System</p>
-  					</div>
-          </div>
-        </div>
-      </div>
-    </section>
+<section class="ftco-section center-align" style="padding: 0;">
 
-    <section class="services-section ftco-section">
-      <div class="container">
-      	<div class="row justify-content-center pb-3">
-          <div class="col-md-10 heading-section text-center ftco-animate">
-          	<span class="subheading">Dashboard</span>
-            <h2 class="mb-4">Welcome {{ name }} ...</h2>
-            <p>Automated TollGate Payment System</p>
-          </div>
-        </div>
-        <div class="row no-gutters d-flex">
-          <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block text-center">
-              <div class="media-body">
-                <h3 class="heading mb-3"></h3>
-                <p><h1></h1></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 col-lg-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block text-center">
-              <div class="media-body">
-                <h3 class="heading mb-3">Balance</h3>
-                <p><h1 id="funds">{{funds}}</h1></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+	<h3 style="text-align: center;">MY CARS</h3>
 
-    <section class="ftco-section center-align" style="padding: 0;">
+	<div style="--my-width: 600px; width: var(--my-width); margin-left: calc((var(--window-width) - var(--my-width)) / 2)">
+		{% for car in cars %}
+			<div data-number-plate="{{ car['number_plate'] }}" class="row" style="margin-top: 5px;">
+				<span style="background: green; color: white; padding: 5px; font-size: 20px;text-align: center;" class="col-sm-8">
+					{{car["number_plate"]}}
+				</span>
+				
+				{% if car["car_license_paid"]: %}
 
-          <h4 class="center-align">MY CARS</h4>
-        <div>
-          {% for car in cars %}
-            <div data-number-plate="{{ car['number_plate'] }}" class="valign-wrapper" style="width: 400px; margin-left: calc((var(--window-width) - 400px) / 2);">
-              <span style="background: green; color: white; padding: 5px; font-size: 20px; margin-right: 20px;">
-                {{car["number_plate"]}}
-              </span>
-              
-              {% if car["car_license_paid"]: %}
-                <button class="btn btn-primary" disabled>PAID</button>
-              {% else%}
-                <button class="btn btn-primary" onclick="payForThisCar(this)">PAY ($10.00)</button>
-              {% endif %}
+					<form class="col-sm-4" action="/remove-car" method="POST">
+						<input type="hidden" name="number_plate" value="{{ car['number_plate'] }}">
+						<input style="background-color: red !important; width: 100% !important; height: 100% !important;" class="btn btn-primary" value="REMOVE CAR" type="submit" />
+					</form>
 
-            </div>
-          {% endfor %}
+				{% else%}
 
-        </div>
-        </tbody>
-      </table>
-    </section>
+					<form class="col-sm-4" action="/pay-for-car" method="POST">
+						<input type="hidden" name="number_plate" value="{{ car['number_plate'] }}">
+						<input style="width: 100% !important; height: 100% !important" class="btn btn-primary" value="PAY ($10)" type="submit" />
+					</form>
 
-      <section class="ftco-section ftco-booking bg-light">
-      	<div class="container ftco-relative">
-      		<div class="row justify-content-center pb-3">
-            <div class="col-md-10 heading-section text-center ftco-animate">
-            	<span class="subheading">Top Up</span>
-              <h2 class="mb-4">Load Money Into Your Account</h2>
-              <p>Automated TollGate Payment System</p>
-            </div>
-          </div>
-          <h3 class="vr">Call Us: +263776433583</h3>
-      		<div class="row justify-content-center">
-      			<div class="col-md-10 ftco-animate">
-      				<form action="/add-funds" class="appointment-form" method="post">
-  	            <div class="row">
-                  <div class="col-sm-6">
-  	                <div class="form-group">
-  			              <input type="number" class="form-control" name="amount" placeholder="Amount" required>
-  			            </div>
-  	              </div>
-                  <div class="col-sm-3">
-  	                <div class="form-group">
-  			              <input type="text" class="form-control" name="verification_code" placeholder="Verification Code" required>
-  			            </div>
-  	              </div>
-                  <div class="col-sm-3">
-                    <div class="form-group">
-      	              <input type="submit" value="ADD" class="btn btn-primary">
-      	            </div>
-                  </div>
-                </div>
-              </form>
-      			</div>
-      		</div>
-      	</div>
-      </section>
+				{% endif %}
 
-    <footer class="ftco-footer ftco-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2 logo">AutoGate</h2>
-              <p>Automated TollGate Payment System</p>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Team Members</h2>
-              <ul class="list-unstyled">
-                <li class="py-2 d-block">Clayton Sibanda</li>
-                <li class="py-2 d-block">Denzel Chiuseni</li>
-                <li class="py-2 d-block">Shabour Banda</li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Links</h2>
-              <ul class="list-unstyled">
-                <li><a href="#top" class="py-2 d-block">Home</a></li>
-                <li><a href="#services" class="py-2 d-block">Services</a></li>
-                <li><a href="#about" class="py-2 d-block">About</a></li>
-                <li><a href="{{url_for('signin')}}" class="py-2 d-block">Sign In</a></li>
+			</div>
+		{% endfor %}
 
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Question?</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Harare Institute of Technology</span></li>
-	                <li><a href="tel: +263776433583"><span class="icon icon-phone"></span><span class="text">+263776433583</span></a></li>
-	                <li><a href="mailto: autogateapp@gmail.com"><span class="icon icon-envelope"></span><span class="text">autogateapp@gmail.com</span></a></li>
-	              </ul>
-	            </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <!-- loader -->
-          <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-        </div>
-      </div>
-    </footer>
+		<form class="row" method="POST" action="/add-car" style="margin-top: 20px;">
+			<input type="text" name="number_plate" placeholder="NEW CAR NUMBER PLATE" class="col-sm-8">
+			<span class="col-sm-4">
+				<input type="submit" value="ADD CAR" class="btn btn-secondary" style="width: 100%;">
+			</span>
+		</form>
 
-    <script src="{{url_for('static', filename = 'js/jquery.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery-migrate-3.0.1.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/popper.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/bootstrap.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.easing.1.3.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.waypoints.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.stellar.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/owl.carousel.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.magnific-popup.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/aos.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/jquery.animateNumber.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/scrollax.min.js') }}"></script>
-    <script src="{{url_for('static', filename = 'js/main.js') }}"></script>
-</body>
+
+
+	</div>
+
+	</tbody>
+</table>
+</section>
+
+<section class="ftco-section ftco-booking bg-light">
+	<div class="container ftco-relative">
+		<div class="row justify-content-center pb-3">
+			<div class="col-md-10 heading-section text-center ftco-animate">
+				<span class="subheading">Top Up</span>
+				<h2 class="mb-4">Load Money Into Your Account</h2>
+				<p>Automated TollGate Payment System</p>
+			</div>
+		</div>
+		<h3 class="vr">Call Us: +263776433583</h3>
+		<div class="row justify-content-center">
+			<div class="col-md-10 ftco-animate">
+				<form action="/add-funds" class="appointment-form" method="post">
+					<div class="row">
+						<div class="col-sm-4">
+							<div class="form-group">
+								<input type="number" class="form-control" name="amount" placeholder="Amount" required>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="form-group">
+								<input type="text" class="form-control" name="verification_code" placeholder="Verification Code" required>
+							</div>
+						</div>
+						<div class="col-sm-4" style="padding-top: 0 !important;">
+							<div class="form-group" style="padding-top: 0 !important; margin-top: 0 !important;">
+								<input type="submit" value="ADD" class="btn btn-primary"  style="margin-top: 0 !important; width: 100%;">
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</section>
+
+{% endblock %}
